ProTrackDev/force-app/main/default/objects/Case/fields/Anlaysis_Comments__c.field-meta.xml
<CustomField>
    <fullName>Anlaysis_Comments__c</fullName>
    <label>Anlaysis Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>