ProTrackDev/force-app/main/default/objects/Case/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>Business Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>