ProTrackDev/force-app/main/default/objects/Case/fields/Deployed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Date_Time__c</fullName>
    <label>Deployed Date Time</label>
    <type>DateTime</type>
</CustomField>