ProTrackDev/force-app/main/default/objects/Case/fields/Effort_Esto__c.field-meta.xml
<CustomField>
    <fullName>Effort_Esto__c</fullName>
    <label>Effort Estimated(Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>