ProTrackDev/force-app/main/default/objects/Case/fields/Effort_Justification__c.field-meta.xml
<CustomField>
    <fullName>Effort_Justification__c</fullName>
    <label>Effort Justification</label>
    <type>TextArea</type>
</CustomField>