ProTrackDev/force-app/main/default/objects/Case/fields/Estimation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimation Approved</label>
    <type>Checkbox</type>
</CustomField>