ProTrackDev/force-app/main/default/objects/Case/fields/Estimation_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Approved_Date__c</fullName>
    <label>Estimation Approved Date</label>
    <type>Date</type>
</CustomField>