ProTrackDev/force-app/main/default/objects/Case/fields/Exit_Milestone_Process__c.field-meta.xml
<CustomField>
    <fullName>Exit_Milestone_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Milestone Process</label>
    <type>Checkbox</type>
</CustomField>