ProTrackDev/force-app/main/default/objects/Case/fields/Progress_Update__c.field-meta.xml
<CustomField>
    <fullName>Progress_Update__c</fullName>
    <label>Progress Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>