ProTrackDev/force-app/main/default/objects/Case/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <inlineHelpText>User&apos;s name who reported the case</inlineHelpText>
    <label>Reported By</label>
    <type>TextArea</type>
</CustomField>