ProTrackDev/force-app/main/default/objects/Case/fields/Solution_Comment__c.field-meta.xml
<CustomField>
    <fullName>Solution_Comment__c</fullName>
    <label>Solution Comment</label>
    <type>TextArea</type>
</CustomField>