ProTrackDev/force-app/main/default/objects/Case/recordTypes/Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Request</fullName>
    <active>true</active>
    <businessProcess>Change Request Process</businessProcess>
    <description>Please select Change Request for enhancement support</description>
    <label>Change Request</label>
</RecordType>