ProTrackDev/force-app/main/default/objects/Case/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <businessProcess>Incident Process</businessProcess>
    <description>Please select Incident for Incident/Problem support issue</description>
    <label>Incident</label>
</RecordType>