ProTrackDev/force-app/main/default/objects/Case/listViews/All_Incidents.listView-meta.xml
<ListView>
    <fullName>All_Incidents</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Incident</value>
    </filters>
    <label>All Incidents</label>
</ListView>